[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/Scenes/Soundtrack.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sounds/Soundtrack/An Endless Railroad.ogg" type="AudioStream" id=2]
[ext_resource path="res://Assets/Sounds/Soundtrack/Time Dust.ogg" type="AudioStream" id=3]
[ext_resource path="res://Assets/Sounds/Soundtrack/The Ancients' Lost Hope.ogg" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Soundtrack/Fading Soul.ogg" type="AudioStream" id=5]

[node name="Soundtrack" type="Node2D"]
script = ExtResource( 1 )

[node name="An_Endless_Railroad" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )

[node name="Time_Dust" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="The_Ancients_Lost_Hope" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 22.0

[node name="Fading_Soul" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -10.0
